...
            <ImageButton
                android:id="@+id/buttonSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_send"
                android:tint="@color/primaryBlue"
                android:contentDescription="Send"/>

            <ImageButton
                android:id="@+id/buttonRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_btn_speak_now"
...
